fix: overflow

--- a/src/components/markdown-preview/index.module.scss
+++ b/src/components/markdown-preview/index.module.scss
@@ -27,5 +27,6 @@
     color: #ff502c;
     display: inline-block;
     max-width: 100%;
+    overflow: auto;
   }
 }
